selenium jenkins ok

--- a/docs/selenium-jenkins.adoc
+++ b/docs/selenium-jenkins.adoc
@@ -28,7 +28,7 @@ Nombre y título del trabajo
 = Actividad 9. Pruebas de aceptación con Selenium
 
 Herramientas y Métodos en Ingeniería del Software
-Version 1.2, Marzo-2021.
+Version 1.2, Abril-2021.
 Joaquín Cañadas <jjcanada@ual.es>
 
 // Entrar en modo no numerado de apartados
@@ -38,13 +38,13 @@ Joaquín Cañadas <jjcanada@ual.es>
 ////
 COLOCA A CONTINUACIÓN EL RESUMEN
 ////
-Tests de aceptación con Selenium.
+Tests de Selenium JUnit WebDriver en Jenkins.
 
 ////
 COLOCA A CONTINUACIÓN LOS OBJETIVOS
 ////
 .Objetivos 
-* Ejecutar los test de Selenium en Jenkins utilizando el navegador en modo _headless_.
+* Ejecutar los test de Selenium JUnit Webdriver en Jenkins utilizando el navegador en modo _headless_.
 
 .Realización y entrega
 ****
@@ -57,7 +57,7 @@ La realización de estas actividades se realizará en equipo. La entrega será m
 
 == Selenium WebDriver y Jenkins
 
-Selenium WebDriver permite ejecutar los tests de Selenium como tests de JUnit, permitiendo así su ejecución en Eclipse y Jenkins. 
+link:selenium-webdriver.html[Selenium WebDriver] permite ejecutar los tests de Selenium como tests de JUnit, permitiendo así su ejecución en Eclipse y Jenkins. 
 
 La ejecución de los tests de Selenium en Jenkins debe hacerse en modo _headless_ ya que la máquina Jenkins no tiene instalada una interfaz gráfica, más comúnmente conocida como X o X11 en Linux. A pesar de ello, podremos hacerlo instalando un entorno de visualización simulado (`xvfb`). Veamos los pasos necesarios. Lo primero es descargar los drivers de los navegadores en la máquina de Jenkins. 
 
@@ -71,9 +71,9 @@ cd
 JENKINS_HOME=/var/lib/jenkins <1>
 echo $JENKINS_HOME
 mkdir $JENKINS_HOME/selenium-drivers <2>
-wget https://github.com/mozilla/geckodriver/releases/download/v0.29.0/geckodriver-v0.29.0-linux64.tar.gz
-sudo tar -C $JENKINS_HOME/selenium-drivers/ -xvf geckodriver-v0.29.0-linux64.tar.gz <3>
-wget https://chromedriver.storage.googleapis.com/89.0.4389.23/chromedriver_linux64.zip <4>
+wget https://github.com/mozilla/geckodriver/releases/download/v0.29.1/geckodriver-v0.29.1-linux64.tar.gz
+sudo tar -C $JENKINS_HOME/selenium-drivers/ -xvf geckodriver-v0.29.1-linux64.tar.gz <3>
+wget https://chromedriver.storage.googleapis.com/90.0.4430.24/chromedriver_linux64.zip <4>
 sudo apt-get install unzip -y 
 sudo unzip chromedriver_linux64.zip -d $JENKINS_HOME/selenium-drivers/ <5>
 ls -la  $JENKINS_HOME/selenium-drivers/ <6>
@@ -166,7 +166,7 @@ image::jenkins-webdriver-pipeline-firefox-ok.png[role="thumb", align="center"]
 ===== A partir de aquí es optativo
 
 [start=4]
-. Para probar la ejecución con Chrome, debes instalar Chrome en la máquina Jenkins. Para ello sigue los pasos: https://ubunlog.com/google-chrome-ubuntu-1804/[Instalar Google Chrome en Ubuntu 18.04 LTS desde la línea de comandos] (No instales al versión beta, tampoco podrás ejecutarlo, simplemente instalarlo). Después, crea una nueva fase donde llames a los tests con el driver de Chrome. Tendrás que modificar el driver en el código, y llamar a maven con el siguiente parámetro para Chrome Driver: 
+. Para probar la ejecución con Chrome, debes instalar Chrome en la máquina Jenkins. Para ello sigue los pasos: https://ubunlog.com/google-chrome-ubuntu-1804/#Instalar_Google_Chrome_en_Ubuntu_1804_LTS_desde_la_linea_de_comandos[Instalar Google Chrome en Ubuntu 18.04 LTS desde la línea de comandos] (No instales al versión beta, tampoco podrás ejecutarlo, simplemente instalarlo). Después, crea una nueva fase donde llames a los tests con el driver de Chrome. Tendrás que modificar el driver en el código, y llamar a maven con el siguiente parámetro para Chrome Driver: 
 
      mvn test -Dwebdriver.chrome.driver=${DRIVERS_LOC}/chromedriver
 
@@ -184,9 +184,9 @@ image::jenkins-blueocean-parallel-browser-testing.png[role="thumb", align="cente
 ====
 *EJERCICIOS (Optativos)* 
 
-. Rediseña las clases JUnit con los test de Selenium para poder lanzar los tests bien con Firefox o bien con en Chrome, sin tener que modificar el código fuente, es decir, sin tener que cambiar el driver "a mano". Dependiendo de tu diseño, tal vez puedas necesitar https://openclassrooms.com/en/courses/5661466-use-testing-in-java-to-achieve-quality-applications/6232331-label-your-tests-with-advanced-junit-annotations[categorías] de JUnit 4. 
+. Rediseña las clases JUnit con los test de Selenium para poder lanzar los tests bien con Firefox o bien con en Chrome, sin tener que modificar el código fuente, es decir, sin tener que cambiar el driver "a mano". Para ello revisa el ejemplo https://github.com/ualhmis/seleniumWebDriverJUnit/tree/junit5/seleniumHMIS21[seleniumHMIS21] en su rama master (JUnit 4), y en la rama junit5. 
 
-. Crea dos fases en el pipeline, una para Firefox y otra para Chrome, y configura el pipeline para que se ejecuten en paralelo, usando el bloque https://www.jenkins.io/doc/book/pipeline/syntax/#parallel[`parallel`]. 
+. Crea dos fases en el pipeline, una para Firefox y otra para Chrome, y configura el pipeline para que se ejecuten en paralelo, usando el bloque https://www.jenkins.io/blog/2017/09/25/declarative-1/[`parallel`] (Más info: https://www.jenkins.io/doc/book/pipeline/syntax/#parallel[Jenkins Pipeline Syntax])
 ====
 
 
