JENKINS_HOME relative path

--- a/docs/selenium-jenkins.adoc
+++ b/docs/selenium-jenkins.adoc
@@ -111,7 +111,7 @@ El pipeline tendrá esta forma:
 pipeline {
     agent any
     environment {
-        DRIVERS_LOC = "/var/lib/jenkins/selenium-drivers/"
+        DRIVERS_LOC = "$JENKINS_HOME/selenium-drivers/"
     }
     tools {
         // Usa aquí el nombre de tu instalación de Maven en Jenkins Tools
