--- a/docs/selenium-ide-ejercicios.adoc
+++ b/docs/selenium-ide-ejercicios.adoc
@@ -203,14 +203,14 @@ Los mensajes de validación son distintos en cada navegador (https://hg.mozilla.
 === Control de flujo en Selenium IDE 
 ****
 
-Como acabamos de ver en el punto anterior, puede ser necesario que en función del navegador que estemos usando o el idioma en el que esté configurado el navegador, nuestro assert deba validar un mensaje de texto u otro.
+Como acabamos de ver en el punto anterior, puede ser necesario que en función del navegador que estemos usando o del idioma en que esté configurado dicho navegador, nuestro `assert` deba validar un mensaje u otro.
 
-Selenium IDE permite añadir sentencias de https://www.selenium.dev/selenium-ide/docs/en/introduction/control-flow[control de flujo] como https://www.selenium.dev/selenium-ide/docs/en/introduction/control-flow#conditional-branching[*condicionales*] y https://www.selenium.dev/selenium-ide/docs/en/introduction/control-flow#looping`[*bucles*]`. 
+Selenium IDE permite añadir sentencias de https://www.selenium.dev/selenium-ide/docs/en/introduction/control-flow[control de flujo] como https://www.selenium.dev/selenium-ide/docs/en/introduction/control-flow#conditional-branching[*condicionales*] y https://www.selenium.dev/selenium-ide/docs/en/introduction/control-flow#looping[*bucles*]. 
 
 El siguiente ejemplo usa de la propiedad `navigator.userAgent` que incluye información del navegador que se está utilizando en la ejecución del test.
 
 .Uso de condicional para distinguir entre navegadores
-image::selenium-ide-conditional-navigators.png[role="thumb", align="center", width=70%]
+image::selenium-ide-conditional-navigators.png[role="thumb", align="center", width=100%]
 
 De igual forma, la propiedad `navigator.language` puede ayudarnos a identificar el idioma del navegador: `es_ES` para español, `en_GB` para inglés.
 
