--- a/docs/modules/ROOT/pages/selenium-ide-ejercicios.adoc
+++ b/docs/modules/ROOT/pages/selenium-ide-ejercicios.adoc
@@ -3,12 +3,18 @@
 Nombre y título del trabajo
 ////
 = Pruebas de aceptación con Selenium. Ejercicios Parte 1: Selenium IDE
-
 Herramientas y Métodos en Ingeniería del Software
 Joaquín Cañadas <jjcanada@ual.es>
 
 // Entrar en modo no numerado de apartados
 :numbered!: 
+// Bloque para GitHub, para que al visualizar el .adoc encuentre las figuras.
+ifdef::env-github[]
+:imagesdir: ../images
+:figure-caption: Figura
+endif::[]
+
+_Version_ *{page-component-display-version}*
 
 [abstract]
 ////
