--- a/docs/modules/ROOT/pages/selenium-ide-intro.adoc
+++ b/docs/modules/ROOT/pages/selenium-ide-intro.adoc
@@ -1,34 +1,17 @@
-////
-Codificación, idioma, tabla de contenidos, tipo de documento
-////
-:encoding: utf-8
-:lang: es
-:toc: right
-:toc-title: Tabla de contenidos
-:keywords: Selenium end-to-end testing
-:doctype: book
-:icons: font
-
-////
-/// activar btn:
-////
-:experimental:
-
-:source-highlighter: rouge
-:rouge-linenums-mode: inline
-
-// :highlightjsdir: ./highlight
-
-:figure-caption: Fig.
-:imagesdir: images
 
 ////
 Nombre y título del trabajo
 ////
 = Pruebas de aceptación con Selenium
-
-Version 2.0, Marzo-2021.
 Joaquín Cañadas <jjcanada@ual.es>
+
+// Bloque para GitHub, para que al visualizar el .adoc encuentre las figuras.
+ifdef::env-github[]
+:imagesdir: ../images
+:figure-caption: Figura
+endif::[]
+
+_Version_ *{page-component-display-version}*
 
 // Entrar en modo no numerado de apartados
 :numbered!: 
