--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -12,13 +12,13 @@ endif::[]
 
 _Version_ *{page-component-display-version}*
 
-:section: ROOT
-:sectionPath: modules/{section}/pages
-:imagesdir: modules/{section}/images
 
-. link:{sectionPath}/selenium-ide-intro.html[Introduccion a Seleniummm]
 
-. link:{sectionPath}/selenium-ide-ejercicios.html[Ejercicios Parte 1 - Proyecto]
+. link:{sectionPath}/selenium-ide-intro.html[Introduccion a Selenium]
+
+. link:{sectionPath}/selenium-ide-ejercicios-crud.html[Ejercicios Parte 1 - Proyecto Aplicación Web con base de datos]
+
+// . link:{sectionPath}/selenium-ide-ejercicios.html[Ejercicios Parte 1 - Proyecto Login]
 
 //. link:docs/selenium-webdriver.html[Selenium WebDriver]
 
