--- a/docs/modules/ROOT/pages/selenium-ide-intro.adoc
+++ b/docs/modules/ROOT/pages/selenium-ide-intro.adoc
@@ -1,9 +1,15 @@
-
+:toc: right
 ////
 Nombre y título del trabajo
 ////
 = Pruebas de aceptación con Selenium
+Herramientas y Métodos en Ingeniería del Software
 Joaquín Cañadas <jjcanada@ual.es>
+
+// Entrar en modo no numerado de apartados
+:numbered!: 
+:imagesdir: ../images
+:figure-caption: Figura
 
 // Bloque para GitHub, para que al visualizar el .adoc encuentre las figuras.
 ifdef::env-github[]
@@ -11,10 +17,9 @@ ifdef::env-github[]
 :figure-caption: Figura
 endif::[]
 
+:page-component-display-version: curso.2022
 _Version_ *{page-component-display-version}*
 
-// Entrar en modo no numerado de apartados
-:numbered!: 
 
 [abstract]
 ////
